# jp-clustering

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: II_1.xml.txt  II_12.xml.txt  II_14.xml.txt  II_17.xml.txt  II_19.xml.txt  II_20.xml.txt  II_21.xml.txt  II_22.xml.txt  II_23.xml.txt  II_24.xml.txt  II_26.xml.txt  II_28.xml.txt  II_31.xml.txt  II_34.xml.txt  II_35.xml.txt  II_37.xml.txt  II_4.xml.txt  II_41.xml.txt  II_42.xml.txt  II_44.xml.txt  II_45.xml.txt  II_5.xml.txt  II_50.xml.txt  II_51.xml.txt  II_52.xml.txt  II_56.xml.txt  II_59.xml.txt  II_60.xml.txt  II_61.xml.txt  II_64.xml.txt  II_65.xml.txt  II_66.xml.txt  II_67.xml.txt  II_69.xml.txt  II_7.xml.txt  II_70.xml.txt  II_71.xml.txt  II_75.xml.txt  II_81.xml.txt  II_82.xml.txt  (+9 more)
data/CAB/: II_10.xml.txt  II_11.xml.txt  II_13.xml.txt  II_18.xml.txt  II_25.xml.txt  II_30.xml.txt  II_32.xml.txt  II_33.xml.txt  II_38.xml.txt  II_39.xml.txt  II_40.xml.txt  II_46.xml.txt  II_47.xml.txt  II_57.xml.txt  II_58.xml.txt  II_6.xml.txt  II_68.xml.txt  II_72.xml.txt  II_74.xml.txt  II_76.xml.txt  II_77.xml.txt  II_79.xml.txt  II_8.xml.txt  II_83.xml.txt  II_87.xml.txt  II_9.xml.txt  II_98.xml.txt
data/LDA_comparison/: topic_distributions.tsv  topic_key.tsv
data/interim/: letters.jsonl
data/processed/: chunks_jp_raw_letter_me5l.pkl  chunks_jp_raw_sliding_512_jinav3.pkl  chunks_jp_transnormer_lemma_letter_jinav3.pkl  chunks_jp_transnormer_lemma_sliding_512_jinav3.pkl  chunks_jp_transnormer_letter_jinav3.pkl  chunks_jp_transnormer_sliding_512_me5l.pkl  chunks_v1.pkl  jp_net.html  result_jp_raw_letter_f2llm.pkl  result_jp_raw_letter_jinav3.pkl  result_jp_raw_letter_me5b.pkl  result_jp_raw_letter_me5l.pkl  result_jp_raw_letter_mpnet.pkl  result_jp_raw_sliding_512_f2llm.pkl  result_jp_raw_sliding_512_jinav3.pkl  result_jp_raw_sliding_512_me5b.pkl  result_jp_raw_sliding_512_me5l.pkl  result_jp_raw_sliding_512_mpnet.pkl  result_jp_transnormer_lemma_letter_f2llm.pkl  result_jp_transnormer_lemma_letter_jinav3.pkl  result_jp_transnormer_lemma_letter_me5b.pkl  result_jp_transnormer_lemma_letter_me5l.pkl  result_jp_transnormer_lemma_letter_mpnet.pkl  result_jp_transnormer_lemma_sliding_512_f2llm.pkl  result_jp_transnormer_lemma_sliding_512_jinav3.pkl  result_jp_transnormer_lemma_sliding_512_me5b.pkl  result_jp_transnormer_lemma_sliding_512_me5l.pkl  result_jp_transnormer_lemma_sliding_512_mpnet.pkl  result_jp_transnormer_letter_f2llm.pkl  result_jp_transnormer_letter_jinav3.pkl  result_jp_transnormer_letter_me5b.pkl  result_jp_transnormer_letter_me5l.pkl  result_jp_transnormer_letter_mpnet.pkl  result_jp_transnormer_sliding_512_f2llm.pkl  result_jp_transnormer_sliding_512_jinav3.pkl  result_jp_transnormer_sliding_512_me5b.pkl  result_jp_transnormer_sliding_512_me5l.pkl  result_jp_transnormer_sliding_512_mpnet.pkl  result_v1.pkl
data/processed/eval/: metrics_jp_raw_letter_f2llm.json  metrics_jp_raw_letter_jinav3.json  metrics_jp_raw_letter_me5b.json  metrics_jp_raw_letter_me5l.json  metrics_jp_raw_letter_mpnet.json  metrics_jp_raw_sliding_512_f2llm.json  metrics_jp_raw_sliding_512_jinav3.json  metrics_jp_raw_sliding_512_me5b.json  metrics_jp_raw_sliding_512_me5l.json  metrics_jp_raw_sliding_512_mpnet.json  metrics_jp_transnormer_lemma_letter_f2llm.json  metrics_jp_transnormer_lemma_letter_jinav3.json  metrics_jp_transnormer_lemma_letter_me5b.json  metrics_jp_transnormer_lemma_letter_me5l.json  metrics_jp_transnormer_lemma_letter_mpnet.json  metrics_jp_transnormer_lemma_sliding_512_f2llm.json  metrics_v1.json  (+14 more)
data/raw/: enriched_corpus.json  extracted.json
notebooks/: 01_eval_variants.ipynb
src/jp_cluster/: cli.py  config.py  models.py
tests/: test_smoke.py
(+334 files in other folders)
