[project]
name = "jp-cluster"
version = "0.1.0"
description = "Semantic clustering of Jean Paul's correspondence — TELOTA challenge prototype"
requires-python = ">=3.11"
authors = [{ name = "Tim Westphal", email = "westphal@bbaw.de" }]

dependencies = [
    # TEI / XML
    "lxml>=5.2",
    "saxonche>=12.5",            # optional, falls XSLT gebraucht wird
    # Embeddings
    "sentence-transformers>=3.0",
    "torch>=2.3",
    "transformers>=4.44",
    # Vector store
    "chromadb>=0.5",
    # Clustering / ML
    "hdbscan>=0.8.37",
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
    # Normalisation
    # transnormer wird optional via pip install transnormer geladen — siehe README
    "spacy>=3.7",
    # Viz / App
    "streamlit>=1.38",
    "pyvis>=0.3.2",
    "plotly>=5.23",
    "pandas>=2.2",
    "numpy>=1.26",
    # Utils
    "tqdm>=4.66",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]
gpu = [
    # zusätzlich, falls auf telota-ai mit CUDA gerechnet wird
]

[project.scripts]
jpc = "jp_cluster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jp_cluster"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
