[project]
name = "jp-cluster"
version = "0.1.0"
description = "Semantic clustering of Jean Paul's correspondence — TELOTA challenge prototype"
requires-python = ">=3.11"
authors = [{ name = "Tim Westphal", email = "westphal@bbaw.de" }]

dependencies = [
    # TEI / XML
    "lxml>=5.2",
    # Embeddings
    "sentence-transformers>=3.0,<6",
    "torch==2.4.1",
    "transformers>=4.44,<5",
    "einops>=0.8",
    # Vector store
    "chromadb>=0.5",
    # Clustering / ML
    "hdbscan>=0.8.37",
    "scikit-learn>=1.5",
    "umap-learn>=0.5.6",
    # Normalisation (transnormer-Modell wird via transformers geladen, kein pip-Paket nötig)
    "spacy>=3.7",
    "de-core-news-lg",
    # Viz / App
    "streamlit>=1.38",
    "pyvis>=0.3.2",
    "plotly>=5.23",
    "pandas>=2.2",
    "numpy>=1.26",
    # Utils
    "tqdm>=4.66",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]
gpu = [
    # Für effiziente multi-GPU-Inferenz via transformers / sentence-transformers
    "accelerate>=0.34",
]
xslt = [
    # Nur nötig, falls TEI via XSLT vorverarbeitet wird
    "saxonche>=12.5",
]

[project.scripts]
jpc = "jp_cluster.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jp_cluster"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
de-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl" }
